--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title> Trip&Treat : Manipur Delights </title>
-    <link rel="icon" href="/logos2.jpg" type="image/x-icon">
+    <link rel="icon" href="/finallogs.ico" type="image/x-icon">
   </head>
 
   <body>
